updated login,store,vendor pages

--- a/public/login.html
+++ b/public/login.html
@@ -58,7 +58,7 @@
         },
         // Will use popup for IDP Providers sign-in flow instead of the default, redirect.
         signInFlow: 'popup',
-        signInSuccessUrl: 'store.html',
+        signInSuccessUrl: 'vendor2.html',
         signInOptions: [
             // Leave the lines as is for the providers you want to offer your users.
             //firebase.auth.GoogleAuthProvider.PROVIDER_ID,
@@ -69,9 +69,9 @@
             //firebase.auth.PhoneAuthProvider.PROVIDER_ID
         ],
         // Terms of service url.
-        tosUrl: '#',
+        tosUrl: 'vendor2.html',
         // Privacy policy url.
-        privacyPolicyUrl: '#'
+        privacyPolicyUrl: 'vendor2.html'
         };
 
         // The start method will wait until the DOM is loaded.
