--- a/public/store.html
+++ b/public/store.html
@@ -224,25 +224,7 @@
 
     <!-- Social icons -->
     <div class="pb-4">
-      <a href="#" target="_blank">
-        <i class="fab fa-facebook-f mr-3"></i>
-      </a>
-
-      <a href="#" target="_blank">
-        <i class="fab fa-twitter mr-3"></i>
-      </a>
-
-      <a href="#" target="_blank">
-        <i class="fab fa-youtube mr-3"></i>
-      </a>
-
-      <a href="#" target="_blank">
-        <i class="fab fa-google-plus-g mr-3"></i>
-      </a>
-
-      <a href="#" target="_blank">
-        <i class="fab fa-github mr-3"></i>
-      </a>
+      <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-text="Used the amazing site Skip The Door today! Visit now." data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
     <!-- Social icons -->
 
@@ -367,7 +349,7 @@
 
       // Easter egg
       if (search == "sdrawkcaB") {
-        window.location.pathname = 'public/sdrawkcaB.html';
+        window.location.pathname = '/sdrawkcaB.html';
       } else {
       // Tidy user input
       search = search.charAt(0).toUpperCase() + search.slice(1).toLowerCase();
@@ -381,8 +363,6 @@
                     querySnapshot.forEach(function(doc) {
                       renderProducts(doc);
                         // doc.data() is never undefined for query doc snapshots
-                        console.log(doc.id);
-                        console.log(doc.data()["Price"]);
                     });
                 })
                 .catch(function(error) {
