--- a/public/sdrawkcaB.html
+++ b/public/sdrawkcaB.html
@@ -102,25 +102,7 @@
 
     <!-- Social icons -->
     <div class="pb-4">
-      <a href="#" target="_blank">
-        <i class="fab fa-facebook-f mr-3"></i>
-      </a>
-
-      <a href="#" target="_blank">
-        <i class="fab fa-twitter mr-3"></i>
-      </a>
-
-      <a href="#" target="_blank">
-        <i class="fab fa-youtube mr-3"></i>
-      </a>
-
-      <a href="#" target="_blank">
-        <i class="fab fa-google-plus-g mr-3"></i>
-      </a>
-
-      <a href="#" target="_blank">
-        <i class="fab fa-github mr-3"></i>
-      </a>
+      <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-text="Used the amazing site Skip The Door today! Visit now." data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
     <!-- Social icons -->
 
@@ -327,12 +309,17 @@
       nameanchor.setAttribute("href", "/product.html");
       addbutton.setAttribute("type", "button");
 
-      nametag.textContent = doc.data().Product;
-      location.textContent = doc.data().Location;
+      nametag.textContent = doc.data().Store + " " + doc.data().Location;
+      // nametag.textContent = doc.data().Product;
+      // location.textContent = doc.data().Location;
+      location.textContent = doc.data().Product;
       description.textContent = doc.data().Description;
       price.textContent = doc.data().Price;
-      stock.textContent = "Currently in stock";
-      addbutton.textContent = "Add to Cart";
+      if (doc.data().Quantity > 0) {
+        stock.textContent = "Currently in stock";
+      } else {
+        stock.textContent = "Out of stock";
+      };
 
       mainrow.appendChild(imgcol);
       imgcol.appendChild(imgcontainer);
@@ -356,11 +343,11 @@
     }
 
     //Lists all products.
-    // db.collection("users").doc("charliewei2").collection("products").get().then((snapshot) => {
-    //   snapshot.docs.forEach(doc => {
-    //     renderProducts(doc);
-    //   })
-    // });
+    db.collection("market").get().then((snapshot) => {
+      snapshot.docs.forEach(doc => {
+        renderProducts(doc);
+      })
+    });
 
     function search() {
       // Clear previous results
@@ -370,49 +357,51 @@
 
       // Easter egg
       if (search == "Backwards") {
-        window.location.pathname = 'public/store.html';
+        window.location.pathname = '/store.html';
       } else {
       // Tidy user input
       search = search.charAt(0).toUpperCase() + search.slice(1).toLowerCase();
       //Declare query area
-      var proRef = db.collection("users").doc("charliewei").collection("products");
 
-      // Search (array)
-      var query = proRef.where("Products", "array-contains", search)
+      // var proRef = db.collection("users").doc("charliewei").collection("products");
+      var proRef = db.collection("market");
+
+    // // Search (array)
+    // var query = proRef.where("Products", "array-contains", search)
+    //     .get()
+    //           .then(function(querySnapshot) {
+    //               querySnapshot.forEach(function(doc) {
+    //                 renderProducts(doc);
+    //                   // doc.data() is never undefined for query doc snapshots
+    //                   console.log(doc.id);
+    //                   console.log(doc.data()["Price"]);
+    //               });
+    //           })
+    //           .catch(function(error) {
+    //               console.log("Error getting documents: ", error);
+    //           });
+    
+    // Search (description)
+    var query = proRef.where("Description", "==", search)
           .get()
-                .then(function(querySnapshot) {
-                    querySnapshot.forEach(function(doc) {
-                      renderProducts(doc);
-                        // doc.data() is never undefined for query doc snapshots
-                        console.log(doc.id);
-                        console.log(doc.data()["Price"]);
-                    });
-                })
-                .catch(function(error) {
-                    console.log("Error getting documents: ", error);
-                });
-              }
-      }
+          .then(function(querySnapshot) {
+              querySnapshot.forEach(function(doc) {
+                renderProducts(doc);
+                  // doc.data() is never undefined for query doc snapshots
+              });
+          })
+          .catch(function(error) {
+              console.log("Error getting documents: ", error);
+          });
 
-      // // Search (description)
-      // var query = proRef.where("Description", "==", search)
-      //       .get()
-      //       .then(function(querySnapshot) {
-      //           querySnapshot.forEach(function(doc) {
-      //             renderProducts(doc);
-      //               // doc.data() is never undefined for query doc snapshots
-      //               console.log(doc.id);
-      //               console.log(doc.data()["Price"]);
-      //           });
-      //       })
-      //       .catch(function(error) {
-      //           console.log("Error getting documents: ", error);
-      //       });
-      //     }
+            }
+    }
 
-    document.getElementById("submit").onclick = search;
+
+document.getElementById("submit").onclick = search;
   </script>
 
+<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
 
 
