--- a/public/product2.html
+++ b/public/product2.html
@@ -355,25 +355,7 @@
 
         <!-- Social icons -->
         <div class="pb-4">
-            <a href="#" target="_blank">
-                <i class="fab fa-facebook-f mr-3"></i>
-            </a>
-
-            <a href="#" target="_blank">
-                <i class="fab fa-twitter mr-3"></i>
-            </a>
-
-            <a href="#" target="_blank">
-                <i class="fab fa-youtube mr-3"></i>
-            </a>
-
-            <a href="#" target="_blank">
-                <i class="fab fa-google-plus-g mr-3"></i>
-            </a>
-
-            <a href="#" target="_blank">
-                <i class="fab fa-github mr-3"></i>
-            </a>
+            <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-text="Used the amazing site Skip The Door today! Visit now." data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
         <!-- Social icons -->
 
