--- a/public/sdrawkcaB.html
+++ b/public/sdrawkcaB.html
@@ -264,7 +264,7 @@
       mainrow.setAttribute("data-id", doc.id);
       
       // img.setAttribute("src", "./img/dummy.jpg");
-      // img.setAttribute("src", doc.data().Image);
+      img.setAttribute("src", doc.data().Image);
       if (doc.data().Image.length == 0 || doc.data().Image == "123") {
         img.setAttribute("src", "./img/dummy.jpg");
       };
