--- a/public/store.html
+++ b/public/store.html
@@ -301,6 +301,8 @@
     //     renderProducts(doc);
     //   })
     // });
+    console.log(localStorage.getItem("homeSearch"));
+
 
     function search() {
       // Clear previous results
