--- a/public/store.html
+++ b/public/store.html
@@ -305,19 +305,11 @@
       productlist.appendChild(linebreak);
     }
 
-    if (localStorage.getItem("homeSearch") == "") {
-
-    //Lists all products.
-    db.collection("market").get().then((snapshot) => {
-      snapshot.docs.forEach(doc => {
-        renderProducts(doc);
-      })
-    });
-
-    } else {
+    if (localStorage.getItem("homeSearch") != "1") {
+      
       let search = localStorage.getItem("homeSearch");
-            // Tidy user input
-            search = search.charAt(0).toUpperCase() + search.slice(1).toLowerCase();
+      // Tidy user input
+      search = search.charAt(0).toUpperCase() + search.slice(1).toLowerCase();
 
       //Declare query area
       var proRef = db.collection("market");
@@ -335,8 +327,16 @@
                 console.log("Error getting documents: ", error);
             });
 
-      localStorage.getItem("homeSearch") == "";
-    }
+          localStorage.setItem("homeSearch", "1");
+    } else {
+          //Lists all products.
+      db.collection("market").get().then((snapshot) => {
+      snapshot.docs.forEach(doc => {
+        renderProducts(doc);
+      })
+    });
+  }
+
 
     function search() {
       // Clear previous results
@@ -369,6 +369,8 @@
 
             }
     }
+
+    document.getElementById("submit").onclick = search;
 
   </script>
 
