--- a/public/aboutUs.html
+++ b/public/aboutUs.html
@@ -94,21 +94,18 @@
 				<!-- Left -->
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item active">
-						<a class="nav-link" href="homepage.html">Home
+						<a class="nav-link" href="./index.html">Home
 							<span class="sr-only">(current)</span>
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="aboutUs.html" target="_blank">About</a>
+						<a class="nav-link" href="./aboutUs.html" target="_blank">About</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#" target="_blank">Sign-up</a>
+						<a class="nav-link" href="./login.html" target="_blank">Sign-up</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#" target="_blank">Settings</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">form</a>
+						<a class="nav-link" href="./vendor.html" target="_blank">Settings</a>
 					</li>
 				</ul>
 			</div>
