--- a/public/index.html
+++ b/public/index.html
@@ -326,7 +326,7 @@
             </p>
 
             <!-- CTA -->
-            <a target="_blank" href="#" class="btn btn-indigo btn-md">Shop Now
+            <a href="./store.html" class="btn btn-indigo btn-md">Shop Now
             </a>
 
           </div>
@@ -499,7 +499,7 @@
       <a class="btn btn-outline-white" href="./login.html" target="_blank" role="button">Sign-up
         <i class="fas fa-user ml-2"></i>
       </a>
-      <a class="btn btn-outline-white" href="#" target="_blank" role="button">Shop Now
+      <a class="btn btn-outline-white" href="./store.html" role="button">Shop Now
         <i class="fas fa-shopping-cart ml-2"></i>
       </a>
     </div>
