--- a/public/market.html
+++ b/public/market.html
@@ -110,7 +110,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" target="_blank">About</a>
+            <a class="nav-link" href="./aboutUs.html" target="_blank">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./login.html">Sign-up</a>
@@ -214,7 +214,7 @@
       <a class="btn btn-outline-white" href="./login.html" target="_blank" role="button">Sign-up
         <i class="fas fa-user ml-2"></i>
       </a>
-      <a class="btn btn-outline-white" href="#" target="_blank" role="button">Shop Now
+      <a class="btn btn-outline-white" href="./store.html" role="button">Shop Now
         <i class="fas fa-shopping-cart ml-2"></i>
       </a>
     </div>
