--- a/public/sdrawkcaB.html
+++ b/public/sdrawkcaB.html
@@ -92,7 +92,7 @@
       <a class="btn btn-outline-white" href="./login.html" target="_blank" role="button">Sign-up
         <i class="fas fa-user ml-2"></i>
       </a>
-      <a class="btn btn-outline-white" href="#" target="_blank" role="button">Shop Now
+      <a class="btn btn-outline-white" href="./store.html" role="button">Shop Now
         <i class="fas fa-shopping-cart ml-2"></i>
       </a>
     </div>
@@ -180,12 +180,12 @@
         <!-- Left -->
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home
+            <a class="nav-link" href="./index.html">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" target="_blank">About</a>
+            <a class="nav-link" href="./aboutUs.html" target="_blank">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./login.html">Sign-up</a>
