--- a/public/vendor2.html
+++ b/public/vendor2.html
@@ -117,13 +117,13 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" target="_blank">About</a>
+            <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./login.html">Sign-up</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" target="_blank">Settings</a>
+            <a class="nav-link" href="#">Settings</a>
           </li>
         </ul>
       </div>
@@ -274,7 +274,7 @@
 
     <!--Call to action-->
     <div class="pt-4">
-      <a class="btn btn-outline-white" href="./login.html" target="_blank" role="button">Sign-up
+      <a class="btn btn-outline-white" href="./login.html" role="button">Sign-up
         <i class="fas fa-user ml-2"></i>
       </a>
       <a class="btn btn-outline-white" href="./store.html" role="button">Shop Now
