--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
     <div class="container">
 
       <!-- Brand -->
-      <a class="navbar-brand" href="#" target="_blank">
+      <a class="navbar-brand" href="#">
         <strong>Skip The Door</strong>
       </a>
 
@@ -107,7 +107,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./aboutUs.html" target="_blank">About</a>
+            <a class="nav-link" href="./aboutUs.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./login.html">Sign-up</a>
@@ -366,7 +366,7 @@
             </p>
 
             <!-- CTA -->
-            <a target="_blank" href="./login.html" class="btn btn-indigo btn-md">Sign-up
+            <a href="./login.html" class="btn btn-indigo btn-md">Sign-up
             </a>
 
           </div>
@@ -496,7 +496,7 @@
 
     <!--Call to action-->
     <div class="pt-4">
-      <a class="btn btn-outline-white" href="./login.html" target="_blank" role="button">Sign-up
+      <a class="btn btn-outline-white" href="./login.html" role="button">Sign-up
         <i class="fas fa-user ml-2"></i>
       </a>
       <a class="btn btn-outline-white" href="./store.html" role="button">Shop Now
