--- a/public/store.html
+++ b/public/store.html
@@ -89,7 +89,7 @@
     <div class="container">
 
       <!-- Brand -->
-      <a class="navbar-brand" href="#" target="_blank">
+      <a class="navbar-brand" href="#">
         <strong>Skip The Door</strong>
       </a>
 
@@ -110,13 +110,13 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./aboutUs.html" target="_blank">About</a>
+            <a class="nav-link" href="./aboutUs.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./login.html">Sign-up</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./vendor2.html" target="_blank">Settings</a>
+            <a class="nav-link" href="./vendor2.html">Settings</a>
           </li>
         </ul>
       </div>
@@ -172,7 +172,7 @@
 
     <!--Call to action-->
     <div class="pt-4">
-      <a class="btn btn-outline-white" href="./login.html" target="_blank" role="button">Sign-up
+      <a class="btn btn-outline-white" href="./login.html" role="button">Sign-up
         <i class="fas fa-user ml-2"></i>
       </a>
       <a class="btn btn-outline-white" href="#" role="button">Shop Now
