--- a/public/aboutUs.html
+++ b/public/aboutUs.html
@@ -78,7 +78,7 @@
 		<div class="container">
 
 			<!-- Brand -->
-			<a class="navbar-brand" href="#" target="_blank">
+			<a class="navbar-brand" href="#">
 				<strong>Skip The Door</strong>
 			</a>
 
@@ -99,13 +99,13 @@
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="./aboutUs.html" target="_blank">About</a>
+						<a class="nav-link" href="./aboutUs.html">About</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="./login.html" target="_blank">Sign-up</a>
+						<a class="nav-link" href="./login.html">Sign-up</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="./vendor.html" target="_blank">Settings</a>
+						<a class="nav-link" href="./vendor.html">Settings</a>
 					</li>
 				</ul>
 			</div>
