vendor link fix

--- a/public/vendor2.html
+++ b/public/vendor2.html
@@ -117,13 +117,13 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="./aboutUs.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./login.html">Sign-up</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Settings</a>
+            <a class="nav-link" href="./vendor2.html">Settings</a>
           </li>
         </ul>
       </div>
