--- a/public/store.html
+++ b/public/store.html
@@ -345,8 +345,8 @@
       let search = document.getElementById("searcher").value;
 
       // Easter egg
-      if (search == "Backwards") {
-        window.location.pathname = './store.html';
+      if (search == "sdrawkcaB") {
+        window.location.href = "./sdrawkcaB.html";
       } else {
       // Tidy user input
       search = search.charAt(0).toUpperCase() + search.slice(1).toLowerCase();
