--- a/public/vendor2.html
+++ b/public/vendor2.html
@@ -182,7 +182,7 @@
 
             <div class="row">
               <div class="col">
-                <a href="./vendor2.html" class="btn btn-unique btn-md">
+                <a href="./storeForm.html" class="btn btn-unique btn-md">
                   Update Products Individually
                   <i class="fas fa-graduation-cap ml-2"></i>
                 </a>
