--- a/public/personal_store.html
+++ b/public/personal_store.html
@@ -109,7 +109,7 @@
         <!-- Left -->
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home
+            <a class="nav-link" href="./vendor2.html">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
@@ -117,10 +117,7 @@
             <a class="nav-link" href="#" target="_blank">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./login.html">Sign-up</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./vendor2.html" target="_blank">Settings</a>
+            <a class="nav-link" href="store.html">Market</a>
           </li>
         </ul>
       </div>
