--- a/public/aboutUs.html
+++ b/public/aboutUs.html
@@ -17,58 +17,8 @@
 
 	<!-- Code To Add Favicon -->
 	<link rel="shortcut icon" type="image/png" href="favicons/smallFav.png">
-
-	<style type="text/css">
-		body {
-			background-color: rgb(4, 71, 71);
-		}
-
-		.main {
-			position: absolute;
-			top: 65px;
-		}
-
-		.mainContent {
-			background-color: cadetblue;
-			display: flex;
-			flex-wrap: wrap;
-			justify-content: space-around;
-		}
-
-		.aboutUs {
-			background-color: blanchedalmond;
-			margin: 15px;
-			border: 2px solid grey;
-			border-radius: 10px;
-			padding: 10px;
-			grid-column: 1 / span 2;
-		}
-
-		.nameHeader {
-			text-align: center;
-		}
-
-		.image {
-			margin: 15px;
-		}
-
-		#image1,
-		#image2,
-		#image3,
-		#image4 {
-			width: 250px;
-			height: 290px;
-			border-radius: 20px;
-			box-shadow: 10px 10px 5px grey;
-		}
-
-		footer {
-			padding-left: 15px;
-			display: flex;
-			flex-wrap: wrap;
-			background-color: rgb(162, 161, 197);
-		}
-	</style>
+	<link rel="stylesheet" href="css/aboutUs.css">
+	
 </head>
 
 <body>
